--- a/Demo/config/routes.yaml
+++ b/Demo/config/routes.yaml
@@ -1,3 +1,3 @@
-index:
-    path: /
-    controller: \App\Controller\AppController::index
+#index:
+#    path: /
+#    controller: \App\Controller\AppController::index
